testdata/baselines/reference/submodule/conformance/moduleExportAssignment2.errors.txt
npm.js(1,11): error TS2322: Type '(tree: any) => void' is not assignable to type 'typeof import("npm")'.
npm.js(5,12): error TS2349: This expression is not callable.
  Type 'typeof import("npm")' has no call signatures.


==== npm.js (2 errors) ====
    var npm = module.exports = function (tree) {
              ~~~~~~~~~~~~~~
!!! error TS2322: Type '(tree: any) => void' is not assignable to type 'typeof import("npm")'.
    }
    module.exports.asReadInstalled = function (tree) {
        npm(tree) // both references should be callable
        module.exports(tree)
               ~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("npm")' has no call signatures.
    }
    